--- a/views/besplatni-programi-deca.ejs
+++ b/views/besplatni-programi-deca.ejs
@@ -35,7 +35,7 @@
 		</div>
 	</div>
 
-	<div class="section grey padded">
+	<!--<div class="section grey padded">
 		<div class="contentWidth">
 			<div class="textByImage">
 				<div class="imageWrap">
@@ -48,9 +48,9 @@
 						<div class="title">
 							СРЕДА - ЋАЧКИ ДАН
 						</div>
-						<!--<div class="text">
+						<div class="text">
 							SRPC 25. maj - Milan Gale Muškatirović u saradnji sa Sekretarijatom za sport i omladinu grada Beograda, organizuje đački dan na otvorenim bazenima tokom trajanja letnje sezone. Svi učenici osnovnih i srednjih škola sa teritorije grada Beograda mogu uz posedovanje đačke knjižice besplatno koristiti otvoreni bazen 25. maj svake srede.
-						</div>-->
+						</div>
 						<div class="text">
 							СРПЦ 25. мај - Милан Гале Мушкатировић у сарадњи са Секретаријатом за спорт и омладину града Београда, организује ђачки дан на отвореним базенима током трајања летње сезоне. Сви ученици основних и средњих школа са територије града Београда могу уз поседовање ђачке књижице бесплатно користити отворени базен 25. мај сваке среде.
 						</div>
@@ -59,15 +59,15 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div>-->
 
-	<div class="section white padded">
+	<div class="section grey padded">
 		<div class="contentWidth">
 			<div class="textByImage">
 				<div class="textWrap">
 					<div class="content">
 						<div class="title">
-							БЕПСЛАТНА ШКОЛА ПЛИВАЊА (попуњени термини)
+							БЕПСЛАТНА ШКОЛА ПЛИВАЊА <!--(попуњени термини)-->
 						</div>
 						<!--<div class="text">
 							Generacije Beograđana naučile su da plivaju upravo na bazenima “25. maja”. Nastavljajući tu tradiciju SRPC 25. maj - Milan Gale Muškatirović u saradnji sa Sekretarijatom za sport i omladinu grada Beograda, organizovao je besplatnu letnju školu plivanja za najmlađe. Prijave se vrše na recepciji Bazena 25. maj
