--- a/views/bazeni-na-otvorenom.ejs
+++ b/views/bazeni-na-otvorenom.ejs
@@ -11,7 +11,22 @@
 					<div class="readingText">Велики олимпијски базен дубине 2 метра који у потпуности испуњава стандарде светских и европских пливачких федерација и намењен је како рекреативцима тако и организацији домаћих и међународних такмичења.<br>&nbsp;<br>Други базен спада у категорију рекреативних, дубок је 1,20м и опремљен садржајима карактеристичним за аквапаркове. Поседује преливну печурку, три “ластина репа”, хидромасажни зидни гејзир и централни гејзир.</div>
 				</div>
 				<div class="inline">
-					<div class="readingText">Трећи и најмањи базен намењен је деци. Прилагођена дубина до 20цм и гумирана подлога чине га максимално безбедним за најмлађе посетиоце.<br>&nbsp;<br>Поред уобичајених пратећих садржаја – тушева, свлачионица, на отвореним базенима се налази и кафе-бар, док су простори базена и баште кафе-бара снабдевени сунцобранима и лежаљкама.<br>&nbsp;<br>Радно време базена на отвореном је од 10-19ч радним данима и од 09-19ч викендом.</div>
+					<div class="readingText">
+						<div>Трећи и најмањи базен намењен је деци. Прилагођена дубина до 20цм и гумирана подлога чине га максимално безбедним за најмлађе посетиоце.<br>&nbsp;<br>Поред уобичајених пратећих садржаја – тушева, свлачионица, на отвореним базенима се налази и кафе-бар, док су простори базена и баште кафе-бара снабдевени сунцобранима и лежаљкама.<br>&nbsp;<br>Радно време базена на отвореном је од 10-19ч радним данима и од 09-19ч викендом.</div>
+						<div>Грађани могу користити затворени базен у следећим терминима:</div>
+						<table class="terminiTable">
+							<tr>
+								<td>Радни Дан</td>
+								<td>Субота</td>
+								<td>Недеља</td>
+							</tr>
+							<tr>
+								<td>10:00 - 19:00</td>
+								<td>09:00 - 19:00</td>
+								<td>09:00 - 19:00</td>
+							</tr>
+						</table>
+					</div>
 				</div>
 			</div>
 		</div>
