--- a/views/bazeni-na-otvorenom.ejs
+++ b/views/bazeni-na-otvorenom.ejs
@@ -12,7 +12,7 @@
 				</div>
 				<div class="inline">
 					<div class="readingText">
-						<div>Трећи и најмањи базен намењен је деци. Прилагођена дубина до 20цм и гумирана подлога чине га максимално безбедним за најмлађе посетиоце.<br>&nbsp;<br>Поред уобичајених пратећих садржаја – тушева, свлачионица, на отвореним базенима се налази и кафе-бар, док су простори базена и баште кафе-бара снабдевени сунцобранима и лежаљкама.<br>&nbsp;<br>Радно време базена на отвореном је од 10-19ч радним данима и од 09-19ч викендом.</div>
+						<div>Трећи и најмањи базен намењен је деци. Прилагођена дубина до 20цм и гумирана подлога чине га максимално безбедним за најмлађе посетиоце.<br>&nbsp;<br>Поред уобичајених пратећих садржаја – тушева, свлачионица, на отвореним базенима се налази и кафе-бар, док су простори базена и баште кафе-бара снабдевени сунцобранима и лежаљкама.</div>
 						<div>Грађани могу користити затворени базен у следећим терминима:</div>
 						<table class="terminiTable">
 							<tr>
