--- a/views/wellness-centar.ejs
+++ b/views/wellness-centar.ejs
@@ -23,7 +23,7 @@
 								<td>15:00 - 22:00</td>
 							</tr>
 						</table>
-						<div style="margin-top:10px">Сезона траје од 1. октобра до 31. маја.</div>
+						<div style="margin-top:10px">Сезона траје од 1. октобра до 31. маја.<br>У суботу 4.11. Сауна ће радити скраћено са почетком од 18ч до 22ч.</div>
 					</div>
 				</div>
 			</div>
