--- a/views/zatvoreni-bazen.ejs
+++ b/views/zatvoreni-bazen.ejs
@@ -26,8 +26,8 @@
 							</tr>
 							<tr>
 								<td><!--14:00 - 16:00--></td>
-								<td><!--13:00 - 15:00--></td>
-								<td><!--13:00 - 15:00--></td>
+								<td>13:00 - 15:00</td>
+								<td>13:00 - 15:00</td>
 							</tr>
 							<tr>
 								<td><!--22:15 - 23:30--></td>
@@ -35,6 +35,7 @@
 								<td><!--21:00 - 23:00--></td>
 							</tr>
 						</table>
+						<div style="margin-top:10px">У суботу 4.11. и у недељу 5.11 отказују се дневни термини за грађанство.</div>
 					</div>
 				</div>
 			</div>
